Bug - Menu alignment

--- a/packages/evershop/src/modules/catalog/pages/frontStore/all/SearchBox.scss
+++ b/packages/evershop/src/modules/catalog/pages/frontStore/all/SearchBox.scss
@@ -2,7 +2,7 @@
   align-self: center;
   position: relative;
   .field-wrapper {
-    background-color: #f1f2f3;
+    background-color: white;
     border-radius: 3px;
   }
   .field-border {
@@ -21,8 +21,9 @@
     background-color: rgba(0, 0, 0, 0.2);
     width: 100%;
     .search-input {
-      background-color: white;
+      background-color: var(--primary);
       padding: 5rem;
+      color: rgb(43, 43, 43);
       display: flex;
       justify-content: center;
       .form-field-container {
@@ -33,6 +34,7 @@
         top: 2rem;
         right: 2rem;
         font-size: 2rem;
+        color: white;
         cursor: pointer;
       }
     }
